- Fixes "hidden" skill information and hard to read meso count.
git-svn-id: https://subversion.assembla.com/svn/mapler-me@895 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/style.player.css
+++ b/trunk/website/inc/css/style.player.css
@@ -360,6 +360,7 @@ hr {
 	float: right;
 	font-size: 10px;
 	margin-right: 48px;
+	color: #000;
 }
 
 
@@ -527,6 +528,7 @@ hr {
 	height: 35px;
 	position: relative;
 	font-size: 10px;
+	color: #000;
 }
 
 .skill .skill_icon {
